gdb array fix